--- a/static-site-test/test-auth-server.html
+++ b/static-site-test/test-auth-server.html
@@ -5,41 +5,53 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Test Auth Server</title>
-  </head>
-  <body>
     <style>
       #container {
         max-width: 500px;
+        margin: auto;
+        font-family: Arial, sans-serif;
+        line-height: 1.5;
       }
       h4 {
         margin-top: 25px;
       }
+      label {
+        display: block;
+        margin-top: 15px;
+      }
     </style>
-
+  </head>
+  <body>
     <main id="container">
       <h1>OAuth2 Test</h1>
-      <h4><b>Step 1:</b> Get the OAuth URL</h4>
+      <!-- Step 1 -->
+      <h4><b>Step 1:</b> Get OAuth URL</h4>
       <p>Click the button below to get your OAuth URL.</p>
       <button id="getAuthUrlButton">Get OAuth URL</button>
       <p id="result"></p>
       <a id="authURL" href target="_blank">Click to authorize</a>
 
-      <h4><b>Step 2:</b> Get the Access Token</h4>
-      <label>Code input <input id="code" type="text" /></label>
+      <!-- Step 2 -->
+      <h4><b>Step 2:</b> Get your code and exchange for an access token</h4>
+      <p>After you’re redirected back to your Meet app on GitHub, copy the code from the URI.</p>
+      <label>
+        Code input:
+        <input id="code" type="text" value="" />
+      </label>
       <button id="getToken">Get Token</button>
       <p id="accessToken"></p>
 
-      <h4><b>Step 3:</b> Get the Calendar Events</h4>
+      <!-- Step 3 -->
+      <h4><b>Step 3:</b> Get the calendar events using your access token</h4>
       <button id="getEvents">Get Events</button>
       <p id="events"></p>
     </main>
-
-    <script>
-      // JavaScript to handle button clicks and fetch data goes here
+    <script type="text/javascript">
+      // --------------------- STEP 1
       const getAuthUrlButton = document.getElementById("getAuthUrlButton");
       const resultElement = document.getElementById("result");
       const resultLink = document.getElementById("authURL");
-      const getAuthURL = "YOUR_LAMBDA_GET_AUTH_URL_ENDPOINT";
+      const getAuthURL = "https://ji7oro25e6.execute-api.us-east-1.amazonaws.com/dev/api/get-auth-url";
 
       getAuthUrlButton.onclick = function () {
         fetch(getAuthURL)
@@ -47,46 +59,62 @@
             return response.json();
           })
           .then(function (json) {
-            const { authUrl } = json;
-            resultElement.innerText = JSON.stringify(json);
-            resultLink.href = authUrl;
+            const result = JSON.stringify(json);
+            const { authUrl } = JSON.parse(result); // Extract authUrl
+            resultElement.innerText = result; // Display response
+            resultLink.href = authUrl; // Update link href
+          })
+          .catch(function (error) {
+            console.error("Error fetching auth URL:", error);
           });
       };
 
-      // Step 2: Get Access Token logic goes here
-
+      // --------------------- STEP 2
       const codeValue = document.getElementById("code");
       const getAccessToken = document.getElementById("getToken");
       const accessTokenElement = document.getElementById("accessToken");
-      const getToken = "YOUR_LAMBDA_GET_TOKEN_ENDPOINT";
+      const getToken = "https://ji7oro25e6.execute-api.us-east-1.amazonaws.com/dev/api/token";
 
       getAccessToken.onclick = function () {
         let code = codeValue.value;
-        code = encodeURIComponent(code);
-        const getTokenRequest = getToken + "/" + code;
+
+        // If the authorization code is not URL-encoded, URL-encode it
+        if (decodeURIComponent(code) === code) {
+          code = encodeURIComponent(codeValue.value);
+        }
+        const getTokenRequest = `${getToken}/${code}`;
+
         fetch(getTokenRequest)
           .then(function (response) {
             return response.json();
           })
           .then(function (json) {
-            accessTokenElement.innerText = JSON.stringify(json);
+            accessTokenElement.innerText = JSON.stringify(json); // Display access token
+          })
+          .catch(function (error) {
+            console.error("Error fetching access token:", error);
           });
       };
 
-      // Step 3: Get Calendar Events logic goes here
-      const getEvents = document.getElementById("getEvents");
-      const events = document.getElementById("events");
-      const getCalendarEvents = "YOUR_LAMBDA_GET_CALENDAR_EVENTS_ENDPOINT";
+      // --------------------- STEP 3: GET CALENDAR EVENTS
+      const getEventsButton = document.getElementById("getEvents");
+      const eventsElement = document.getElementById("events");
+      const getCalendarEvents = "https://ji7oro25e6.execute-api.us-east-1.amazonaws.com/dev/api/get-events"; // Update with your actual endpoint
 
-      getEvents.onclick = function () {
-        const { access_token } = JSON.parse(accessTokenElement.innerText);
-        const eventRequest = getCalendarEvents + "/" + access_token;
+      getEventsButton.onclick = function () {
+        const { access_token } = JSON.parse(accessTokenElement.innerText);  // Get the access token from Step 2
+
+        const eventRequest = getCalendarEvents + "/" + access_token;  // Attach the access token to the request
+
         fetch(eventRequest)
           .then(function (response) {
-            return response.json();
+            return response.json();  // Parse the JSON response
           })
           .then(function (json) {
-            events.innerText = JSON.stringify(json, null, 2);
+            eventsElement.innerText = JSON.stringify(json, null, 2);  // Display the calendar events
+          })
+          .catch(function (error) {
+            console.error("Error fetching calendar events:", error);  // Handle errors
           });
       };
     </script>
